--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ fastapi = "==0.95.1"
 uvicorn = "==0.21.1"
 sqlalchemy = "==2.0.10"
 requests = "==2.28.2"
+mysql-connector-python = "==8.0.33"
 
 [dev-packages]
 
